# hhh-ships-service

./: .gitignore  .gitleaksignore  CLAUDE.md  CODEOWNERS  Dockerfile  LICENSE  README.md  coverage.xml  pyproject.toml
.claude/: CLAUDE.md
.github/instructions/: async-and-parallelization.instructions.md  bug-history.instructions.md  copilot.instructions.md  development-workflow.instructions.md  gh-workflow.instructions.md
.github/workflows/: auto-approve-runs.yml  auto-status.yml  ci.yml  notify-main.yml  pr-title.yml  secret-scan.yml
src/: main.py  seed.py
src/application/ports/inbound/: ship_service.py
src/application/ports/outbound/: ship_repository.py
src/application/services/: ship_service_impl.py
src/domain/exceptions/: ship_exceptions.py
src/domain/models/: ship.py
src/infrastructure/adapters/inbound/api/: ship_api_mapper.py  ship_dto.py  ship_router.py
src/infrastructure/adapters/outbound/persistence/: mongo_ship_repository.py  ship_persistence_mapper.py
src/infrastructure/config/: dependencies.py  settings.py
tests/: auth_helpers.py
tests/integration/: conftest.py  test_ship_api.py
tests/unit/: test_main.py  test_seed.py
tests/unit/application/: test_ship_service_impl.py
tests/unit/domain/: test_ship_model.py
tests/unit/infrastructure/: test_mongo_ship_repository.py  test_ship_api_mapper.py  test_ship_router.py
tests/unit/infrastructure/config/: test_dependencies.py
